[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchid-storage-postgres"
description = "PostgreSQL storage backend plugin for the Orchid AI framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agents", "storage", "postgresql", "asyncpg"]
dependencies = [
    "orchid-ai>=1.8.6",
    "asyncpg>=0.29.0",
    "langgraph-checkpoint-postgres>=2.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]

[project.entry-points."orchid.visibility_fragments"]
postgres = "orchid_storage_postgres:_register"

[project.entry-points."orchid.checkpointers"]
postgres = "orchid_storage_postgres:_register"

[project.urls]
Homepage = "https://github.com/gadz82/orchid-storage-postgres"
Issues = "https://github.com/gadz82/orchid-storage-postgres/issues"

[tool.hatch.version]
path = "orchid_storage_postgres/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.semantic_release]
version_variables = ["orchid_storage_postgres/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): v{version} [skip ci]"
build_command = "pip install build && python -m build"
tag_format = "v{version}"

[tool.semantic_release.publish]
upload_to_vcs_release = true
dist_glob_patterns = ["dist/*"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
